# clearml-molecular-simulation-tutorial

./: .gitignore  AGENTS.md  README-ja.md  README.md  pyproject.toml
clearml_gamess/: README-ja.md  README.md  __init__.py  cml_pipeline_gamess.py  cml_task_run_gamess.py  cml_task_track_gamess.py  run_gamess.py  track_gamess.py
clearml_gamess/examples/: water_rhf_sto3g_opt.cml.py
clearml_gamess/examples/gamess_test_cases/: README.md  error_delayed_timlim_c28.cml.py  error_delayed_timlim_c28.inp  error_fast_bad_scf.cml.py  error_fast_bad_scf.inp  success_fast_water.cml.py  success_fast_water.inp  success_long_c4h6_uhf_hessian.cml.py  success_long_c4h6_uhf_hessian.inp
local/: clearml.conf.example
skills/clearml/artifacts/: SKILL.md
skills/clearml/development-workflow/: SKILL.md
skills/clearml/inspect/: SKILL.md
skills/clearml/logging/: SKILL.md
skills/clearml/task-design/: SKILL.md
tools/: __init__.py  start_clearml_agent.py
