[project]
name = "clearml-molsim-tutorial"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "clearml>=2.1.7",
    "clearml-agent>=3.0.2",
    "impi-devel>=2021.18.0; (platform_system == 'Linux' and platform_machine == 'x86_64') or (platform_system == 'Windows' and platform_machine == 'AMD64')",
]

[project.scripts]
start-clearml-agent = "tools.start_clearml_agent:main"
cml-pipeline-gamess = "clearml_gamess.cml_pipeline_gamess:main"
cml-task-run-gamess = "clearml_gamess.cml_task_run_gamess:main"
cml-task-track-gamess = "clearml_gamess.cml_task_track_gamess:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clearml_gamess", "tools"]
